--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="./assets/foto.jpg" alt="foto">
+  <img src="./assets/foto.png" alt="foto">
 </body>
 </html>
