--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="./assets/foto2.png" alt="foto">
+  <div>
+    <img src="./assets/foto1.jpg" alt="foto1">
+  </div>
+  <div>
+    <img src="./assets/foto2.png" alt="foto2">
+  </div>
 </body>
 </html>
