--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./assets/foto1.jpg" alt="foto1">
   </div>
   <div>
-    <img src="./assets/foto2.png" alt="foto2">
+    <img src="./assets/foto2.jpg" alt="foto2">
   </div>
 </body>
 </html>
