--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-    <img src="./assets/foto1.jpg" alt="foto1">
+    <img src="./assets/photo1.jpg" alt="foto1">
   </div>
   <div>
     <img src="./assets/photo2.jpg" alt="foto2">
