--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <div>
-    <img src="./assets/photos3a.jpg" alt="foto1">
+    <img src="./assets/photo1.jpg" alt="foto1">
   </div>
   <div>
-    <img src="./assets/photo2a.png" alt="foto2">
+    <img src="./assets/photos3a.jpg" alt="foto2">
+  </div>
+  <div>
+    <img src="./assets/photo2a.png" alt="foto3">
   </div>
 </body>
+
 </html>
