--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div>
-    <img src="./assets/photo1.jpg" alt="foto1">
+    <img src="./assets/вв.jpg" alt="foto1">
   </div>
   <div>
     <img src="./assets/photos3a.jpg" alt="foto2">
