--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
   <div>
-    <img src="./assets/вв.jpg" alt="foto1">
+    <img src="./assets/photo1.jpg" alt="foto1">
   </div>
   <div>
-    <img src="./assets/photos3a.jpg" alt="foto2">
+    <img src="./assets/photo2.jpg" alt="foto2">
   </div>
   <div>
     <img src="./assets/photo2a.png" alt="foto3">
